Add config file, create simple dto class
Add mysql jdbc dependency

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,11 @@
             <artifactId>ehcache-core</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
     </dependencies>
 </project>
